// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenselist with expense 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={
      Array [
        Object {
          "amount": 195,
          "createdAt": 0,
          "description": "gum",
          "id": "1",
          "note": "",
        },
        Object {
          "amount": 170000,
          "createdAt": -345600000,
          "description": "rent",
          "id": "2",
          "note": "",
        },
        Object {
          "amount": 4000,
          "createdAt": 345600000,
          "description": "credit card",
          "id": "3",
          "note": "",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        Array [
          <ExpenseListItem
            amount={195}
            createdAt={0}
            description="gum"
            id="1"
            note=""
          />,
          <ExpenseListItem
            amount={170000}
            createdAt={-345600000}
            description="rent"
            id="2"
            note=""
          />,
          <ExpenseListItem
            amount={4000}
            createdAt={345600000}
            description="credit card"
            id="3"
            note=""
          />,
        ],
        <h1>
          expense list
        </h1>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "amount": 195,
          "createdAt": 0,
          "description": "gum",
          "id": "1",
          "note": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "amount": 170000,
          "createdAt": -345600000,
          "description": "rent",
          "id": "2",
          "note": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "amount": 4000,
          "createdAt": 345600000,
          "description": "credit card",
          "id": "3",
          "note": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "expense list",
        },
        "ref": null,
        "rendered": "expense list",
        "type": "h1",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          Array [
            <ExpenseListItem
              amount={195}
              createdAt={0}
              description="gum"
              id="1"
              note=""
            />,
            <ExpenseListItem
              amount={170000}
              createdAt={-345600000}
              description="rent"
              id="2"
              note=""
            />,
            <ExpenseListItem
              amount={4000}
              createdAt={345600000}
              description="credit card"
              id="3"
              note=""
            />,
          ],
          <h1>
            expense list
          </h1>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "amount": 195,
            "createdAt": 0,
            "description": "gum",
            "id": "1",
            "note": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "amount": 170000,
            "createdAt": -345600000,
            "description": "rent",
            "id": "2",
            "note": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "amount": 4000,
            "createdAt": 345600000,
            "description": "credit card",
            "id": "3",
            "note": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "expense list",
          },
          "ref": null,
          "rendered": "expense list",
          "type": "h1",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render no expense p element with no expenses 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p>
           No Expenses 
        </p>,
        <h1>
          expense list
        </h1>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": " No Expenses ",
        },
        "ref": null,
        "rendered": " No Expenses ",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "expense list",
        },
        "ref": null,
        "rendered": "expense list",
        "type": "h1",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p>
             No Expenses 
          </p>,
          <h1>
            expense list
          </h1>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": " No Expenses ",
          },
          "ref": null,
          "rendered": " No Expenses ",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "expense list",
          },
          "ref": null,
          "rendered": "expense list",
          "type": "h1",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
